--- a/rainforest/app/views/products/show.html.erb
+++ b/rainforest/app/views/products/show.html.erb
@@ -1,1 +1,13 @@
-<h1>Show</h1>
+
+<h1>Product</h1>
+
+
+
+<h2>Name - <%= @product.name %></br></h2>
+<h3>Description - <%= @product.discription %></br></h3>
+<h3>Price (in cents) - <%= @product.price_in_cents %></br></br></h3>
+
+
+
+<%= link_to("Edit", edit_product_path(@product.id)) %> |
+<%= link_to("Delete", product_path(@product.id), method: :delete, data: {confirm: "Are you sure you want to delete this product?"})  %>
