index page added and links to show page

--- a/rainforest/app/views/products/index.html.erb
+++ b/rainforest/app/views/products/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Index</h1>
+<h1>Products</h1>
+
+
+<ul>
+  <% @products.each do |item| %>
+  <li>
+    <p> <%= link_to(item.name, product_path(item.id))%> </p>
+    <p> <%= item.discription %>  </p>
+    <p> <%= item.price_in_cents %>  </p>
+  </li>
+  <% end %>
+
+</ul>
