--- a/rainforest/app/views/products/index.html.erb
+++ b/rainforest/app/views/products/index.html.erb
@@ -8,6 +8,11 @@
     <p> <%= item.discription %>  </p>
     <p> <%= number_to_currency(item.price_in_cents/100) %>  </p>
   </li>
+  <%= link_to("Edit", edit_product_path(item.id)) %> |
+  <%= link_to("Delete", product_path(item.id), method: :delete, data: {confirm: "Are you sure you want to delete this product?"})  %>
   <% end %>
 
 </ul>
+
+
+<%= link_to("New", new_product_path) %>
