--- a/rainforest/app/views/products/new.html.erb
+++ b/rainforest/app/views/products/new.html.erb
@@ -1,1 +1,8 @@
-<h1>New</h1>
+<h1>Create New Product</h1>
+
+<%= form_for :products do |f| %>
+  Name: <%= f.text_field :name %> <br />
+  Description: <%= f.text_field :discription %> <br />
+  Price (in cents): <%= f.number_field :price_in_cents %> <br />
+  <%= f.submit %>
+  <% end %>
