--- a/rainforest/app/views/products/show.html.erb
+++ b/rainforest/app/views/products/show.html.erb
@@ -9,5 +9,5 @@
 
 
 
-<%= link_to("Edit", edit_product_path(@product.id)) %> |
-<%= link_to("Delete", product_path(@product.id), method: :delete, data: {confirm: "Are you sure you want to delete this product?"})  %>
+<%= link_to("Edit", edit_product_path(@product.id)) %> | 
+<%= link_to("Delete", product_path(@product.id)), method: :delete, data: {confirm: "Are you sure you want to delete this product?"})  %>
